--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -74,6 +74,9 @@
                     <a class="nav-link" href="/sales/new/">Новый чек</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/admin/">Админ панель</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/finance/monthly/">Финансы</a>
                 </li>
             </ul>
