--- a/inventory/templates/inventory/split_sales_list.html
+++ b/inventory/templates/inventory/split_sales_list.html
@@ -28,8 +28,8 @@
                 <th>Дата (чек)</th>
                 <th>Парфюм</th>
                 <th>Объём (мл)</th>
-                <th>Тип тары</th>
-                <th>Кол-во тары</th>
+                <th>Тип атомайзера</th>
+                <th>Кол-во атомайзеров</th>
                 <th>Стоимость</th>
             </tr>
         </thead>
