--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -18,7 +18,7 @@
                     </div>
                     <div>
                         <h5 class="mb-1">Склад</h5>
-                        <small class="text-muted">Остатки парфюма, тары и косметики</small>
+                        <small class="text-muted">Остатки парфюма, атомайзеров и косметики</small>
                     </div>
                 </div>
             </a>
