--- a/inventory/templates/inventory/bottle_stock_list.html
+++ b/inventory/templates/inventory/bottle_stock_list.html
@@ -24,7 +24,7 @@
         <table class="table table-striped table-bordered align-middle mb-0">
             <thead class="table-light">
             <tr>
-                <th>Тип тары</th>
+                <th>Тип атомайзеров</th>
                 <th>Остаток (шт.)</th>
             </tr>
             </thead>
