--- a/sales/templates/sales/saleitem_list.html
+++ b/sales/templates/sales/saleitem_list.html
@@ -17,6 +17,7 @@
                 <tr>
                     <th scope="col">ID</th>
                     <th scope="col">Дата</th>
+                    <th scope="col">Метод оплаты</th>
                     <th scope="col">Чек</th>
                     <th scope="col">Тип</th>
                     <th scope="col">Товар</th>
@@ -33,6 +34,7 @@
                 <tr>
                     <td>{{ item.id }}</td>
                     <td>{{ item.sale.sale_date|date:"d.m.Y H:i" }}</td>
+                    <td>{% if item.sale.payment_method %}{{ item.sale.payment_method.name }}{% endif %}</td>
                     <td class="text-primary"><a href="/sales/today/#sale-{{ item.sale.id }}">#{{ item.sale.id }}</a></td>
                     <td>{{ item.get_sale_type_display }}</td>
                     <td>
@@ -47,7 +49,7 @@
                     <td>{% if item.discount_percent %}{{ item.discount_percent }}{% else %}0{% endif %}</td>
                 </tr>
                 {% empty %}
-                <tr><td colspan="11" class="text-center text-muted">Позиции чеков отсутствуют</td></tr>
+                <tr><td colspan="12" class="text-center text-muted">Позиции чеков отсутствуют</td></tr>
                 {% endfor %}
                 </tbody>
             </table>
